style(drawers): fixe z-index

--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -2,7 +2,7 @@
 }
 
 .drawer__panel {
-  @apply fixed top-0 right-0 z-20;
+  @apply fixed top-0 right-0 z-40;
   @apply w-1/2 h-screen p-gutter;
   @apply bg-black text-white;
 }
@@ -12,6 +12,6 @@
 }
 
 .drawer__bg {
-  @apply fixed top-0 left-0 w-screen h-screen z-10;
+  @apply fixed top-0 left-0 w-screen h-screen z-30;
   @apply bg-white/75 cursor-pointer;
 }
